server file update

--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.8.4",
     "cloudinary": "^1.41.3",
-    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.2",
+    "express-async-errors": "^3.1.1",
+    "google-auth-library": "^9.15.1",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
-    "multer-storage-cloudinary": "^4.0.0",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "streamifier": "^0.1.1"
   }
 }
